fix broken css on intro section cta + fix intro behaviour on mobile and devices with height < 550px

--- a/src/scss/blocs/buttons-wrapper.scss
+++ b/src/scss/blocs/buttons-wrapper.scss
@@ -12,6 +12,7 @@
     -ms-flex-pack: end;
     justify-content: flex-end;
   }
+}
 
 .buttons-wrapper__btn {
   @include flexbox();
@@ -45,16 +46,16 @@
   }
 }
 
-
-    .buttons-wrapper__btn--darkBig {
-        display: inline-block;
-        width: 80%;
-        margin: 0 auto;
-        background: url('../img/button-background.jpg');
-        @include bcg;
-        text-transform: uppercase;
-        @include  tablet-portrait() {
-            width: 253px;
-        }
-    }
+.buttons-wrapper__btn--darkBig {
+  display: inline-block;
+  width: 80%;
+  margin: 0 auto;
+  background: url('../img/button-background.jpg');
+  @include bcg;
+  @include rem(font-size, 17.6px);
+  text-transform: uppercase;
+  @include  tablet-portrait() {
+    width: 253px;
+    @include rem(font-size, 20px);
+  }
 }
